--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>YOUTUBE</title>
+    <title>YouTube :: Home</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
-    <script src="https://kit.fontawesome.com/301ec7e323.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    <header>
+        header
+    </header>
+    <aside>
+        aside menu
+    </aside>
+    <main>
+        main content
+    </main>
 </body>
 
 </html>
